# TicketEnd

./: .env.example  Cargo.toml  Makefile
abi/: EventManager.json  IFlashLoanReceiver.json  Marketplace.json  PlatformToken.json  TicketManager.json  TokenSwap.json
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/abis/: EventManager.json  Marketplace.json  TicketManager.json  TokenSwap.json
crates/shared/migrations/: 0001_init.sql  0002_constraints.sql  0002_constraints_down.sql  0003_triggers.sql  0003_triggers_down.sql  0004_contract_registry.sql  0005_indexed_events.sql
crates/shared/src/: config.rs  error.rs  lib.rs  seed.rs
crates/shared/src/contracts/: bindings.rs  mod.rs  provider.rs  registry.rs
crates/shared/src/db/: pool.rs
crates/shared/src/domain/event/: mod.rs
crates/shared/src/repo/: event_repo.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: main.rs
docs/: backend_design.md  backend_dev_plan.md
scripts/: update_contract_registry.rs
