[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
alloy = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
