[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
alloy = { workspace = true }
