[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
